# autoblog

backend/: .gitignore  app.py  blog_workflow.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  scheduler.py
bolt-blog/: GET_STARTED.txt  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
bolt-blog/src/: App.jsx  index.css  main.jsx
bolt-blog/src/components/: BlogCard.jsx  Footer.jsx  Header.jsx
bolt-blog/src/hooks/: useScrollProgress.js
bolt-blog/src/lib/: Api.jsx
bolt-blog/src/pages/: About.jsx  Article.jsx  Home.jsx
bolt-blog/src/worker/: cronWorker.js
