[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.1",
    "fastapi>=0.121.0",
    "groq>=0.33.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "langchain-core>=1.0.3",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.2",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.3",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
